[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-cli"
version = "0.1.0"
description = "Terminal Agent for DeepSeek AI - Claude Code style CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "George Ikanos", email = "your@email.com"}
]
keywords = ["deepseek", "ai", "cli", "terminal", "ollama", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "ollama>=0.3.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.24.0",
    "groq>=0.4.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/epinusai/epinus-deepseek-v3.1671bil"
Repository = "https://github.com/epinusai/epinus-deepseek-v3.1671bil"
Issues = "https://github.com/epinusai/epinus-deepseek-v3.1671bil/issues"

[project.scripts]
epinus = "deepseek_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepseek_cli*"]
